Made alot of mini plots for bvp unsorted

--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
 </head>
 <body>
     <h1>Gamify Unplugged: How Gamifying Surveys can Reduce Cognitive Load</h1>
-    <div id="chart1"></div>
-    <div id="chart2"></div>
-    <div id="chart3"></div>
-    <div id="chart4"></div>
-    <div id="chart5"></div>
-    <div id="chart6"></div>
-    <div id="chart7"></div>
-    <div id="chart8"></div>
-    <div id="chart9"></div>
-    <div id="chart10"></div>
-    <div id="chart11"></div>
+
 
     <!-- Interactive Visualization-->
     <!-- Drop-down menu -->
@@ -30,5 +20,7 @@
 
     <!-- SVG container -->
     <svg width="600" height="400"></svg>
+
+    <div class="plots"></div>
 </body>
 </html>
