updated formatting and added slideshow feature

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type="module" src="index.js"></script>
 </head>
 <body>
     <h1>Gamify Unplugged: How Gamifying Surveys can Reduce Cognitive Load</h1>
-
 
     <!-- Interactive Visualization-->
     <!-- Drop-down menu -->
@@ -20,5 +20,12 @@
         createInteractiveChart("chart");
     </script>
     <div class="plots"></div>
+
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+        <!-- Slides will be inserted here by JavaScript -->
+    </div>
+    <button onclick="plusSlides(-1)">Previous</button>
+    <button onclick="plusSlides(1)">Next</button>
 </body>
 </html>
