--- a/index.html
+++ b/index.html
@@ -21,11 +21,43 @@
     </script>
     <div class="plots"></div>
 
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
+    <h2>How each participant responded to the pre vs post-gamification survey across measures</h2>
+
+    <h3>BVP</h3>
+    <div class="slideshow-container" id="bvp-slideshow">
         <!-- Slides will be inserted here by JavaScript -->
     </div>
-    <button onclick="plusSlides(-1)">Previous</button>
-    <button onclick="plusSlides(1)">Next</button>
+    <div class="slideshow-controls">
+        <button onclick="plusSlides(-1, 'bvp-slideshow')">Previous</button>
+        <button onclick="plusSlides(1, 'bvp-slideshow')">Next</button>
+    </div>
+
+    <h3>EDA</h3>
+    <div class="slideshow-container" id="eda-slideshow">
+        <!-- Slides will be inserted here by JavaScript -->
+    </div>
+    <div class="slideshow-controls">
+        <button onclick="plusSlides(-1, 'eda-slideshow')">Previous</button>
+        <button onclick="plusSlides(1, 'eda-slideshow')">Next</button>
+    </div>
+
+    <h3>Temperature</h3>
+    <div class="slideshow-container" id="temp-slideshow">
+        <!-- Slides will be inserted here by JavaScript -->
+    </div>
+    <div class="slideshow-controls">
+        <button onclick="plusSlides(-1, 'temp-slideshow')">Previous</button>
+        <button onclick="plusSlides(1, 'temp-slideshow')">Next</button>
+    </div>
+
+    <h3>PPG Green</h3>
+    <div class="slideshow-container" id="ppg-slideshow">
+        <!-- Slides will be inserted here by JavaScript -->
+    </div>
+    <div class="slideshow-controls">
+        <button onclick="plusSlides(-1, 'ppg-slideshow')">Previous</button>
+        <button onclick="plusSlides(1, 'ppg-slideshow')">Next</button>
+    </div>
+
 </body>
 </html>
