Organized files for more dev
survey - index.html, survey.js
writeup-writeup.html (previous index.html),  interactive_vz.js, plot.js (previous index.js).
made a global.js for website spanning features

--- a/writeup/writeup.html
+++ b/writeup/writeup.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="plots.js"></script>
+    <script type='module' src='../global.js'></script>
+    <title>Takeaway</title>
 </head>
 <body>
-    <h1>Gamify Unplugged: How Gamifying Surveys can Reduce Cognitive Load</h1>
-
-    <!-- Interactive Visualization-->
+        <!-- Interactive Visualization-->
     <!-- Drop-down menu -->
     <h2>Mean Visualization of Pre vs Post Gamification Across all Measurements and Periods</h2>
     <div id="chart"></div>
@@ -58,6 +57,5 @@
         <button onclick="plusSlides(-1, 'ppg-slideshow')">Previous</button>
         <button onclick="plusSlides(1, 'ppg-slideshow')">Next</button>
     </div>
-
 </body>
 </html>
