Made the skeleton of the first survey

--- a/writeup/writeup.html
+++ b/writeup/writeup.html
@@ -6,6 +6,7 @@
     <title>Cognitive Journey Dashboard</title>
     <link rel="stylesheet" href="writeup.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script typer="module" src="global.js"></script>    
 </head>
 <body>
     <div class="dashboard-container">
