--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <script type='module' src='survey.js'></script>
 </head>
 <body>
-    <h1>Gamify Unplugged: How Gamifying Surveys can Reduce Cognitive Load</h1>
-    <div class="main">
+    <header>
+        <h1>Gamify Unplugged: How Gamifying Surveys can Reduce Cognitive Load</h1>
         <p id="introduction">
             Engagement is a growing demand in the digital age and is advantagous for the user and developer to understand methods
             to lessen cognitive load of potentially tedious tasks as people grow to struggle with focus.
         </p>
+    </header>
+
+    <div class='survey'>
+        
     </div>
 </body>
 </html>
