added plain survey

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type='module' src='global.js'></script>
     <script type='module' src='survey.js'></script>
+    <script type="module" src="survey-2.js"></script>
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -25,10 +27,14 @@
     </p>
 
     <!-- Green Start Button -->
-    <button id="start-button" class="nes-btn is-success">Start</button>
+    <!-- <button id="start-button" class="nes-btn is-success">Start</button> -->
 
-    <div class="survey-container">
+    <!-- <div class="survey-container">
         <div class="survey"></div>
+    </div> -->
+
+    <div class="survey-2-container">
+        <div class="survey-2"></div>
     </div>
 
     <div class="progress-container" id="progress-container" style="display: none;">
