--- a/writeup/index.html
+++ b/writeup/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cognitive Journey Dashboard</title>
     <link rel="stylesheet" href="https://unpkg.com/nes.css/css/nes.min.css">    
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="writeup.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type="module" src="../global.js"></script>    
 </head>
