--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type='module' src='global.js'></script>
-    <script type='module' src='survey.js'></script>
+    <script type='module' src='survey-2.js'></script>
 </head>
 <body>
     <header>
