--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="progress-container" id="progress-container" style="display: none;">
-        <h1 class="nes-text progress-title">Progress</p>
+        <h1 class="nes-text progress-title">Progress</h1>
         <progress class="nes-progress is-primary" id="survey-progress" value="0" max="100"></progress>
     </div>
 </body>
