--- a/writeup/index.html
+++ b/writeup/index.html
@@ -51,10 +51,10 @@
                 <div id="narrative-content">
                     <h2>Baseline Phase</h2>
                     <div id="baseline-narrative" class="narrative active">
-                        <p>This panel shows baseline measurements before any cognitive tasks or surveys were administered.</p>
+                        <p>In the baseline phase, participants were asked to be in a relaxed state for 3 minutes. They were not allowed to perform any tasks to prevent any distractions.</p>
                         <p><strong>Key insights:</strong></p>
                         <ul>
-                            <li>BVP: Both post and pre gamified survey saw similar levels of BVP.</li>
+                            <li>BVP: Both post and pre gamified survey started at similar levels of BVP.</li>
                             <li>EDA: Post gamified survey group saw a lower starting level of EDA than the pre gamified survey.</li>
                         </ul>
                     </div>
@@ -84,6 +84,7 @@
                 <div class="citation">
                     Grzeszczyk, M. K., Blanco, R., Adamczyk, P., Kus, M., Marek, S., Pręcikowski, R., & Lisowska, A. (2023). CogWear: Can we detect cognitive effort with consumer-grade wearables? (Version 1.0.0) [Data set]. PhysioNet. https://physionet.org/content/consumer-grade-wearables/1.0.0/
                 </div>
+                
             </div>
         </footer>
     </div>
