added brain waves viz

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -95,7 +95,6 @@
                 </div>
             </div>
         </section>
-        
         <!-- Survey Section -->
         <section id="survey-section" class="viz-section">
             <h2>3. Survey Phase</h2>
@@ -126,7 +125,19 @@
                 </div>
             </div>
         </section>
-        
+        <div class="brainwave-container">
+            <div class="controls">
+              <label for="wave-select">Select Brain Wave Type: </label>
+              <select id="wave-select">
+                <option value="delta">Delta</option>
+                <option value="theta">Theta</option>
+                <option value="alpha">Alpha</option>
+                <option value="beta">Beta</option>
+                <option value="gamma">Gamma</option>
+              </select>
+            </div>
+            <div id="brainwave-visualization"></div>
+          </div>
         <!-- Footer -->
         <footer class="footer-container">
             <div class="footer-content">
