added survey visualization

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -124,7 +124,9 @@
                     </div>
                 </div>
             </div>
+        <div id="time-distribution"></div>
         </section>
+        
         <div class="brainwave-container">
             <div class="controls">
               <label for="wave-select">Select Brain Wave Type: </label>
