updated gamified survey

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="black-line"></div> 
 
     <p class="nes-text">
-        One way to minimize cognitive load is through gamification—the act of incorportating game-like elements into non-game settings. To further understand this idea, below we present our own take on a "gamified" survey!
+        One way to minimize cognitive load is through gamification—the act of incorportating game-like elements into non-game settings. To further understand this idea, please take the survey below!
     </p>
 
     <div class="survey-2-container">
