--- a/survey/index.html
+++ b/survey/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/nes.css/css/nes.min.css">
     <link rel="stylesheet" href="../style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <script type='module' src='../global.js'></script>
     <script type='module' src='../survey.js'></script>
     <link rel="icon" href="favicon.png" type="image/png">
@@ -32,6 +33,13 @@
     <div class="progress-container" id="progress-container" style="display: none;">
         <h1 class="nes-text progress-title">Progress</h1>
         <progress class="nes-progress is-primary" id="survey-progress" value="0" max="100"></progress>
+    </div>
+
+    <div id="time-results" class="nes-container is-rounded" style="display: none; margin-top: 20px;">
+        <h2 class="nes-text">Survey Completion Times</h2>
+        <p id="survey2Time"></p>
+        <p id="survey1Time"></p>
+        <p id="comparison-text"></p>
     </div>
 </body>
 </html>
