--- a/writeup/index.html
+++ b/writeup/index.html
@@ -85,7 +85,14 @@
                 
                 <div class="narrative-panel">
                     <div class="narrative">
-                        <p>In the cognitive phase, the participants were asked to name the ink color of a word which is the name of the color (most often different color than the ink). This was a cognitively challenging task that requires the participants' full focus to choose the right color.</p>
+                        <p>In the cognitive phase, the participants were asked to take a cognitively demanding task: Stroop test. Below is an sample:</p>
+                        <div class="stroop-example">
+                            <div class="stroop-words">
+                                <span style="color: red">BLUE</span>
+                                <span style="color: green">RED</span>
+                                <span style="color: blue">GREEN</span>
+                            </div>
+                            <p class="stroop-explanation">In a Stroop test, participants must name the <em>color</em> of the text, not read the word.</p>
                         <p><strong>Key insights:</strong></p>
                         <ul>
                             <li>BVP: Compared to the baseline, the BVP taken during the cognitive test is more volatile for both the pre and post survey results.</li>
@@ -144,7 +151,7 @@
 
         <div class="electrode-info">
             <h3>EEG Electrode Locations:</h3>
-            <p>We analyzed EEG data from four key electrodes: AF7, AF8, TP9, and TP10</p>
+            <p>We analyzed EEG data from four key electrodes:</p>
             <div class="electrode-details">
                 <h4>Frontal Electrodes (AF7 and AF8):</h4>
                 <ul>
