Adding a next button at the bottom of the first survey page

--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
     <div class="survey-2-container">
         <div class="survey-2"></div>
     </div>
+    <!-- Navigates to Writeup at the end of the survey -->
+    <section class="cta-section">
+        <p class="cta-text">Good work getting through that. Press on the button below to learn the impacts of gamification!</p>
+        <a href="writeup/" class="nes-btn is-primary">Enter Writeup →</a>
+    </section>
 
     <div class="progress-container" id="progress-container" style="display: none;">
         <h1 class="nes-text progress-title">Progress</h1>
         <progress class="nes-progress is-primary" id="survey-progress" value="0" max="100"></progress>
     </div>
+
 </body>
 </html>
