--- a/survey/index.html
+++ b/survey/index.html
@@ -40,6 +40,9 @@
         <p id="survey2Time"></p>
         <p id="survey1Time"></p>
         <p id="comparison-text"></p>
+        <div class="analysis-container nes-container is-dark">
+            <p id="analysis-text" class="nes-text"></p>
+        </div>
     </div>
 </body>
 </html>
